--- a/Celebrity/UIViews/Subviews/AddCelebView.xib
+++ b/Celebrity/UIViews/Subviews/AddCelebView.xib
@@ -29,7 +29,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cmE-XK-FaQ">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cmE-XK-FaQ">
                                     <rect key="frame" x="0.0" y="29" width="270" height="29"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="29" id="sZe-r9-uen"/>
